Fixing title alignment on DevOps slides

--- a/src/styl/remark-themes/default.styl
+++ b/src/styl/remark-themes/default.styl
@@ -24,7 +24,7 @@ h3
   position absolute
   bottom 3em
 
-li 
+li
   p
     line-height 1.25em
 
@@ -41,7 +41,7 @@ a, a > code
 code
   border-radius 5px
   background #e7e8e2
-  
+
 .remark-code
 .remark-inline-code
   font-family "Ubuntu Mono"
@@ -65,12 +65,12 @@ code
   h1
     text-align left
 
-#slideshow 
-  .slide 
-    .content 
+#slideshow
+  .slide
+    .content
       code
         font-size 0.8em
-      pre 
+      pre
         code
           padding 15px
           font-size 0.9em
@@ -87,7 +87,7 @@ code
 
 /* Slide-specific styling */
 
-#slide-inverse 
+#slide-inverse
   .footnote
     bottom 12px
     left 20px
@@ -100,7 +100,7 @@ code
 .small .remark-inline-code
   font-size 17px
 .medium .remark-code
-.medium .remark-inline-code 
+.medium .remark-inline-code
   font-size 20px
 
 /* Two-column layout */
@@ -111,11 +111,11 @@ code
   height 92%
   color #777
 
-.left-column 
+.left-column
   h2:last-of-type
   h3:last-child
     color #000
-  
+
 .right-column
   float right
   width 75%
@@ -193,6 +193,10 @@ code
 .full-screen-image.square
   background-size contain
 
+.left
+  h1
+    text-align: left;
+
 .fit-image
   background-size contain
 .fit-image.square
@@ -203,11 +207,11 @@ code
   vertical-align middle
   text-align center
 .new-section h1
-.title 
+.title
   h1
     font-size 4em
     margin 0
-  h2 
+  h2
     font-size 3em
     margin 0
   .about
@@ -217,7 +221,7 @@ code
     li
       font-size 2em
 
-.alt-brand 
+.alt-brand
   color: #e28964;
 
 .sub-section
@@ -226,7 +230,7 @@ code
   h1
     font-size 4em
   h2
-    font-size 3em    
+    font-size 3em
   h2:first-child
     color #999
     margin-top 0
@@ -237,7 +241,7 @@ code
 .meme
   vertical-align bottom
   text-align center
-  h1 
+  h1
     font-size 6em
     font-family Impact
     text-transform uppercase
@@ -245,20 +249,20 @@ code
 
 .loop
   text-align center
-  img 
+  img
     height 480px
 
   .transition
-    p 
+    p
       position relative
-      img 
+      img
         position absolute
         top 0
         margin-left auto
         margin-right auto
         left 0
         right 0
-        
+
         -webkit-transition opacity 1s ease-in-out
         -moz-transition opacity 1s ease-in-out
         -o-transition opacity 1s ease-in-out
@@ -268,12 +272,12 @@ code
         animation-iteration-count 1
         animation-duration 2s
         animation-fill-mode forwards
-      
+
         &:first-child
           animation-name fadeOut
         &:last-child
           animation-name fadeIn
-      
+
 @keyframes fadeOut
   0%
     opacity 1
